adds flyway, adds postgres db, modifies configurations